#
# Makefile.am - automake input for demuxers subdirectory
# This file is part of PsyMP3.
# Copyright © 2011-2025 Kirn Gill <segin2005@gmail.com>
#
# PsyMP3 is free software. You may redistribute and/or modify it under
# the terms of the ISC License <https://opensource.org/licenses/ISC>
#

SUBDIRS =

if HAVE_FLAC
SUBDIRS += flac
endif

if HAVE_OGGDEMUXER
SUBDIRS += ogg
endif
